tdf#94835: crash while loading RTF with \dppolygon token fixed

RTF token \dppolygon now creates a PolyPolygonShape
test included

Change-Id: I065eaac0ca1b8a59f02c3198363180ab244a3942